--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Kaltepetlahtol (Casa de las lenguas de la sierra de Puebla)</h1>
+            <h1>Kaltepetlahtol (La casa de las lenguas de la sierra de Puebla)</h1>
         </div>
         <nav>
             <ul>
