--- a/index.html
+++ b/index.html
@@ -1,47 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaltepetlahtol</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_alt.css">
 </head>
-<body>
-    <header>
-        <div class="logo">
-            <h1>Kaltepetlahtol (La casa de las lenguas de la sierra de Puebla)</h1>
-        </div>
+<body >
+
+    <!-- Header Section -->
+    <header">
+        <h1 class="tophead">Kaltepetlahtol - La Casa de las Lenguas de la sierra de Puebla</h1>
         <nav>
-            <ul>
-                <li><a href="#quienessomos">¿Aquin yen tehuan?</a></li>
-                <li><a href="#quehacemos">¿Tlenoh ticchiuah?</a></li>
-                <li><a href="#contactenos">Nechnohnotza</a></li>
-            </ul>
+            <a href="#quienessomos" >¿Aquin yen tehuan?</a>
+            <a href="#investigacion" >Tlamachtiliztl</a>
+            <a href="#proyectos" >Totiquiuan</a>
+            <a href="#publicaciones" >Amameh</a>
+            <a href="#contacto" >Techonnohnotza</a>
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Xonualcalaqui Caltipetlahtol</h2>
-        <p></p>
-        <a href="#quienessomos" class="btn-flag">Cachi</a>
+    <!-- Hero Section -->
+    <section id="hero" >
+        <h2>Xonualcalaquican Caltipetlahtol / Bienvenido a Kaltepetlahtol</h2>
+        <p>El centro de la tecnología para las lenguas indígenas de Puebla.</p>
+        <a href="#quienessomos" >Cachi Techixmatican</a>
     </section>
 
-    <section id="quienessomos">
-        <h3>¿Aquin yen tehuan?</h3>
-        <p>Somos un centro de investigación dedicada a la tecnología lingüística para las lenguas originarias del estado de Puebla.</p>
+    <!-- About Us Section -->
+    <section id="quienessomos" >
+        <h2>¿Aquin yen tehuan?/ ¿Quiénes somos?</h2>
+        <p>Kaltepetlahtol yeh se maseualnichikolistl.</p>
+
     </section>
 
-    <section id="quehacemos">
-        <h3>¿Tlenoh ticchiuah?</h3>
+    <!-- Research Section -->
+    <section id="investigacion" >
+        <h2>Tlamachtiliztl</h2>
+        <p>Nos dedicamos a explorar las intersecciones entre tecnología y las lenguas indígena, creando herramientas que fomenten el uso, el estudio, y la enseñanza de las lenguas originarias del estado de Puebla. Nuestro trabajo abarca proyectos en tecnología del lenguaje, lingüística computacional y educación digital.</p>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="proyectos" >
+        <h2>Totiquiuan</h2>
         <ul>
-            <li>Investigaciones lingüísticas</li>
-            <li>Capacitación tecnológica para hablantes de lenguas indígenas</li>
+            <li>
+
+            </li>
         </ul>
     </section>
 
-    <footer>
-        <p>&copy; 2024 Kaltepetlahtol - La Casa de las lenguas de la sierra de Puebla, A.C. </p>
+    <!-- Publications Section -->
+    <section id="publicaciones" >
+        <h2>Amameh</h2>
+        <ul >
+            <li>
+                ● <b>Pugh, R.</b> and Tyers, F. M. (2024) "A Universal Dependencies Treebank for Highland Puebla Nahuatl". <i>Proceedings of the 2024 Annual Conference of the North American Chapter of the Association for Computational Linguistics </i> (<a href="files/ud-highland-puebla_naacl-2024-2.pdf">slides</a>)
+            </li>
+            <li>
+                ● <b>Pugh, R.</b> and Tyers, F. M. (2024) "Experiments in Multivariant Natural Language Processing for Nahuatl". <i>VarDial 2024</i>.(<a href="files/Multivariant-nlp-nahuatl.pdf&quot;">slides</a>) 
+                </li>
+        </ul>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contacto" >
+        <h2>Techonnohnotza</h2>
+        <p>Para más información o colaboraciones, envíenos un correo a: <strong>info@kaltepetlahtol.mx</strong></p>
+        <p>Tla toconiqui toconmatis cachi totechpa, xotechontitlanili se tlahtol ica: <strong>info@kaltepetlahtol.mx</strong></p>
+
+    </section>
+
+    <!-- Footer Section -->
+    <footer >
+        <p>&copy; 2024 Kaltepetlahtol - La Casa de la Lengua de la sierra de Puebla</p>
     </footer>
+
 </body>
 </html>
- 
