--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body >
 
     <!-- Header Section -->
-    <header">
+    <header>
         <h1 class="tophead">Kaltepetlahtol - La Casa de las Lenguas de la sierra de Puebla</h1>
         <nav>
             <a href="#quienessomos" >¿Aquin yen tehuan?</a>
             <a href="#investigacion" >Tlamachtiliztl</a>
             <a href="#proyectos" >Totiquiuan</a>
-            <a href="#publicaciones" >Amameh</a>
+	    <!--<a href="#publicaciones" >Amameh</a>-->
             <a href="#contacto" >Techonnohnotza</a>
         </nav>
     </header>
@@ -51,9 +51,9 @@
     </section>
 
     <!-- Publications Section -->
-    <section id="publicaciones" >
+    <!--<section id="publicaciones" >
         <h2>Amameh</h2>
-        <ul >
+        <ul>
             <li>
                 ● <b>Pugh, R.</b> and Tyers, F. M. (2024) "A Universal Dependencies Treebank for Highland Puebla Nahuatl". <i>Proceedings of the 2024 Annual Conference of the North American Chapter of the Association for Computational Linguistics </i> (<a href="files/ud-highland-puebla_naacl-2024-2.pdf">slides</a>)
             </li>
@@ -61,13 +61,13 @@
                 ● <b>Pugh, R.</b> and Tyers, F. M. (2024) "Experiments in Multivariant Natural Language Processing for Nahuatl". <i>VarDial 2024</i>.(<a href="files/Multivariant-nlp-nahuatl.pdf&quot;">slides</a>) 
                 </li>
         </ul>
-    </section>
+    </section>-->
 
     <!-- Contact Section -->
     <section id="contacto" >
         <h2>Techonnohnotza</h2>
-        <p>Para más información o colaboraciones, envíenos un correo a: <strong>info@kaltepetlahtol.mx</strong></p>
-        <p>Tla toconiqui toconmatis cachi totechpa, xotechontitlanili se tlahtol ica: <strong>info@kaltepetlahtol.mx</strong></p>
+        <p>Para más información o colaboraciones, envíenos un correo a: <strong>contacto@kaltepetlahtol.mx</strong></p>
+        <p>Tla toconiqui toconmatis cachi totechpa, xotechontitlanili se tlahtol ica: <strong>contacto@kaltepetlahtol.mx</strong></p>
 
     </section>
 
@@ -75,6 +75,5 @@
     <footer >
         <p>&copy; 2024 Kaltepetlahtol - La Casa de la Lengua de la sierra de Puebla</p>
     </footer>
-
 </body>
 </html>
