--- a/index.html
+++ b/index.html
@@ -1,79 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaltepetlahtol</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kaltepetlahtol - La Casa de las Lenguas Indígenas de la Sierra de Puebla</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
 </head>
-<body >
-
-    <!-- Header Section -->
-    <header>
-        <h1 class="tophead">Kaltepetlahtol - La Casa de las Lenguas de la sierra de Puebla</h1>
-        <nav>
-            <a href="#quienessomos" >¿Aquin yen tehuan?</a>
-            <a href="#investigacion" >Tlamachtiliztl</a>
-            <a href="#proyectos" >Totiquiuan</a>
-	    <!--<a href="#publicaciones" >Amameh</a>-->
-            <a href="#contacto" >Techonnohnotza</a>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section id="hero" >
-        <h2>Xonualcalaquican Caltipetlahtol / Bienvenido a Kaltepetlahtol</h2>
-        <p>El centro de la tecnología para las lenguas indígenas de Puebla.</p>
-        <a href="#quienessomos" >Cachi Techixmatican</a>
+<body>
+  <header class="header">
+    <div class="container">
+      <h1 class="logo">
+        <span class="red">KAL</span>
+        <span class="white">TEPE</span>
+        <span class="green">TLAHTOL</span>
+      </h1>
+      <p class="tagline">La Casa de las Lenguas Indígenas de la Sierra de Puebla</p>    
+    </div>
+  </header>
+  <main class="main">
+    <section id="about" class="section">
+      <h2>¿Aquin yen tehuan? (¿Quienes somos?)</h2>
+      <p>"Kaltepetlahtol" yeh se maseualnichicolistl campa secchiua tiposmeh tlen uili cualtia ica tomaseualtlahtoluan</p>
     </section>
-
-    <!-- About Us Section -->
-    <section id="quienessomos" >
-        <h2>¿Aquin yen tehuan?/ ¿Quiénes somos?</h2>
-        <p>Kaltepetlahtol yeh se maseualnichikolistl.</p>
-
+    <section id="contact" class="section">
+      <h2>Techonnohnotza (Contáctenos)</h2>
+      <p>Para más información o colaboraciones, envíenos un correo a: <a href="mailto:contact@kaltepetlahtol.mx">contacto@kaltepetlahtol.mx</a></p>
+      <p>Tla toconiqui toconmatis cachi totechpa, xotechontitlanili se tlahtol ica: <a href="mailto:contact@kaltepetlahtol.mx">contacto@kaltepetlahtol.mx</a></p>
     </section>
-
-    <!-- Research Section -->
-    <section id="investigacion" >
-        <h2>Tlamachtiliztl</h2>
-        <p>Nos dedicamos a explorar las intersecciones entre tecnología y las lenguas indígena, creando herramientas que fomenten el uso, el estudio, y la enseñanza de las lenguas originarias del estado de Puebla. Nuestro trabajo abarca proyectos en tecnología del lenguaje, lingüística computacional y educación digital.</p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="proyectos" >
-        <h2>Totiquiuan</h2>
-        <ul>
-            <li>
-
-            </li>
-        </ul>
-    </section>
-
-    <!-- Publications Section -->
-    <!--<section id="publicaciones" >
-        <h2>Amameh</h2>
-        <ul>
-            <li>
-                ● <b>Pugh, R.</b> and Tyers, F. M. (2024) "A Universal Dependencies Treebank for Highland Puebla Nahuatl". <i>Proceedings of the 2024 Annual Conference of the North American Chapter of the Association for Computational Linguistics </i> (<a href="files/ud-highland-puebla_naacl-2024-2.pdf">slides</a>)
-            </li>
-            <li>
-                ● <b>Pugh, R.</b> and Tyers, F. M. (2024) "Experiments in Multivariant Natural Language Processing for Nahuatl". <i>VarDial 2024</i>.(<a href="files/Multivariant-nlp-nahuatl.pdf&quot;">slides</a>) 
-                </li>
-        </ul>
-    </section>-->
-
-    <!-- Contact Section -->
-    <section id="contacto" >
-        <h2>Techonnohnotza</h2>
-        <p>Para más información o colaboraciones, envíenos un correo a: <strong>contacto@kaltepetlahtol.mx</strong></p>
-        <p>Tla toconiqui toconmatis cachi totechpa, xotechontitlanili se tlahtol ica: <strong>contacto@kaltepetlahtol.mx</strong></p>
-
-    </section>
-
-    <!-- Footer Section -->
-    <footer >
-        <p>&copy; 2024 Kaltepetlahtol - La Casa de la Lengua de la sierra de Puebla</p>
-    </footer>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 Kaltepetlahtol - La Casa de la Lengua de la sierra de Puebla, A.C.</p>
+    </div>
+  </footer>
 </body>
+<script>
+    function toggleNav() {
+  document.getElementById('nav').classList.toggle('show');
+  document.querySelector('.nav-toggle').classList.toggle('active');
+}
+
+</script>
 </html>
