--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main class="main">
     <section id="about" class="section">
       <h2>¿Aquin yen tehuan? (¿Quienes somos?)</h2>
-      <p>"Kaltepetlahtol" yeh se maseualnichicolistl campa secchiua tiposmeh tlen uili cualtia ica tomaseualtlahtoluan</p>
+      <p>"Kaltepetlahtol" yeh se maseualnichicolistl campa secchiua tiposmeh tlen uileh cualtiah ica tomaseualtlahtoluan</p>
     </section>
     <section id="contact" class="section">
       <h2>Techonnohnotza (Contáctenos)</h2>
